# pico_rocket

./: .gitmodules  gll_gga.txt
examples/pico_bmp3xx/: CMakeLists.txt  main.cpp
examples/pico_gnss/: CMakeLists.txt  main.cpp
examples/pico_gnss_tiny/: CMakeLists.txt  main.cpp
examples/pico_lora/: CMakeLists.txt  main.cpp
examples/pico_lora copy/: main.cpp
examples/pico_lora_recv/: CMakeLists.txt  main.cpp
examples/pico_mpu6050/: CMakeLists.txt  i2cScan.cpp  i2c_test.cpp  main.cpp
examples/pico_uart_bridge/: main.cpp
libs/Adafruit_BMP3XX/: CMakeLists.txt
libs/Adafruit_BusIO/: CMakeLists.txt
libs/Adafruit_MPU6050/: CMakeLists.txt
libs/Adafruit_Sensor/: CMakeLists.txt
libs/Lora_E32/: CMakeLists.txt
libs/mpu6050/: CMakeLists.txt
libs/tiny_gps/: CMakeLists.txt
libs/u_blox/: CMakeLists.txt
roket_sensor_test/: CMakeLists.txt  algorithm_test.cpp  dataStruct.hpp  main.cpp  main_receive.cpp  main_transmit.cpp
